
AURBUILD
 -v1.8.0 (February 2008)
	* Cleaned up directory structure
	* Tweaked setup script, and some other files (more to come)
	* Added aurbuild's own PKGBUILD to misc/
	* Removed safe flagging notices and checks.
	  (Removed from AUR web interface)

 -v1.7.8 (March 29, 2007)
	* USE_FAKEROOT fix due to makepkg v3
	* USE_COLOR fix due to makepkg v3
	* lost PKGDEST due to makepkg v3

 -v1.7.7 (March 24, 2007)
	* Fixed lost permissions in AUR tarball.

 -v1.7.6 (March 3, 2007)
	* Fixed failed C compliler checks during .configure due to an
	  unwritable HOME location for ccache. HOME will be passed as
	  /var/tmp/aurbuild and thus ccache data will reside in
	  /var/tmp/aurbuild/.ccache for aurbuilds.

 -v1.7.5 (February 26, 2007)
	* Fixed broken Maintainer field in --search due to AUR upgrade.
	* Spelling corrections in manual page.

 -v1.7.4 (February 10, 2007)
 	* Fixed permission errors while extracting the AUR tarball.
	* Corrected message about needing write AND EXECUTE permissions on the
	  $PKGDEST in main script and man page.
	* Added -f, --official to build official packages found in /var/abs/.
	* Added [community] package support by calling on aurbuild --official
	  as needed (see COMMUNITY PACKAGES in man page for more details).

 -v1.7.3 (January 22, 2007)
	* Spelling correction for versionpkg().

 -v1.7.2 (January 21, 2007)
 	* Fixed missing -f option to versionpkg.
	* Fixed makepkg v3 missing -w option.
	* Added --rm-make-deps to remove unneeded make dependencies after a
	  successful build.

 -v1.7.1 (January 17, 2007)
 	* fixed extraction errors
	* help menu fix
	* /usr/share/doc files included in setup.py

 -v1.7 (January 16, 2007)
 	* Running as regular user is no longer needed. Root access will be
	  required to drop down to a designated under-privileged 
	  user for building. This will enable greater future scalability while
	  adding a higher level of security to the build process.
	* build directory location now in