@@ -163,7 +163,7 @@ def usage():
 					abs_root+'\''
 	print '                        instead of AUR'
 	print '  -a, --auto-build      bypass menu and build ' + \
-					'automatically DANGEROUS'
+					'automatically (DANGEROUS)'
 	print '  -u, --upgrade         upgrade all packages installed ' + \
 					'from unsupported AUR'
 	print '  -n, --noconfirm       bypass any confirmation messages ' + \
@@ -412,6 +412,7 @@ def get_tarball(pkg, pkg_query = None):
 	if main_url == '':
 		if not aur_space in pkg_query:
 			# try again with a space
+			print "SPACE CONDITION"
 			return get_tarball(pkg, pkg_query=pkg+aur_space)
 		else:
 			if UPGRADE: 
@@ -421,7 +422,6 @@ def get_tarball(pkg, pkg_query = None):
 						': not found in AUR')
 				cleanup()
 				sys.exit(1)
-
 
 	try:
 		f = urllib.urlopen(main_url)
